feat : 파이프라인 응답 필드 정리
- 파이프라인 feat 응답에서 priority 제외

- 레포 URL 연결 응답에서 feats 제외

- 응답 필드 제거 검증 테스트 추가